# agentframework-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test.http  testwithrest.http
.github/agents/: copilot-instructions.md
.github/workflows/: create-agent.yml  deploy.yml  infra-deploy.yml  test.yml
agents/: __init__.py  registry.py
agents/_base/: agent_factory.py  client.py  config.py  run.py
agents/_base/integrations/: search.py
agents/_base/tools/: __init__.py
agents/code_helper/: README.md  config.py  instructions.md
agents/code_helper/integrations/: knowledge.py
agents/code_helper/tools/: __init__.py  sample_tool.py
agents/doc_assistant/: README.md  config.py  instructions.md
agents/doc_assistant/integrations/: knowledge.py
agents/doc_assistant/tools/: __init__.py
agents/probation_poc_agent/: README.md  config.py  instructions.md
agents/probation_poc_agent/integrations/: knowledge.py
agents/probation_poc_agent/tools/: __init__.py  sample_tool.py
agents/probation_q_a_agent/: README.md  config.py  instructions.md
agents/probation_q_a_agent/integrations/: knowledge.py
agents/probation_q_a_agent/tools/: __init__.py  sample_tool.py
docs/: custom-tools-guide.md  deployment-guide.md  knowledge-search-guide.md  scaffolding-guide.md
infra/: main.bicep  parameters.dev.bicepparam  parameters.prod.bicepparam  parameters.qa.bicepparam
infra/modules/: acr-role-assignment.bicep  container-app.bicep  identity.bicep  log-analytics.bicep  managed-environment.bicep
notebooks/: 01_setup_and_connect.ipynb  02_build_and_run_agent.ipynb  03_scaffold_agent.ipynb  04_deploy_to_aca.ipynb
scripts/: create_agent.py  delete_agent.py  diagnose_mi.py  run_agent.py
static/: index.html
tests/: conftest.py
tests/_base/: test_agent_factory.py  test_client.py  test_config.py  test_context_providers.py  test_knowledge_modules.py  test_mcp_and_session.py  test_run.py  test_search_provider.py
tests/code_helper/: conftest.py  test_agent_create.py  test_agent_run.py
tests/doc_assistant/: conftest.py  test_agent_create.py  test_agent_run.py  test_tools.py
tests/probation_poc_agent/: conftest.py  test_agent_create.py  test_agent_run.py  test_tools.py
tests/probation_q_a_agent/: conftest.py  test_agent_create.py  test_agent_run.py  test_tools.py
tests/scaffolding/: test_create_agent.py  test_delete_agent.py
