[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentframework-automation"
version = "0.1.0"
description = "Multi-agent platform using Microsoft Agent Framework with Azure AI Foundry models"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "agent-framework>=1.0.0rc3,<2",
    "azure-identity>=1.15.0",
    "pydantic-settings>=2.0.0",
    "azure-ai-agentserver-agentframework>=1.0.0b17",
    "azure-ai-agents>=1.2.0b5",
    "azure-ai-agentserver-core>=1.0.0b7",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black[jupyter]>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "ipykernel>=6.29.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
prerelease = "if-necessary-or-explicit"

[tool.setuptools.packages.find]
include = ["agents*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring live Azure credentials",
    "code_helper: marks tests for the code-helper agent",
    "doc_assistant: marks tests for the doc-assistant agent",
    "probation_poc_agent: marks tests for the probation-poc-agent agent",
    "probation_q_a_agent: marks tests for the probation-q-a-agent agent",
]
